<resources>
    <string name="app_name">WhatsApp</string>
    <string name="conversation_tab">Conversas</string>
    <string name="status_tab">Status</string>
    <string name="calls_tab">Chamadas</string>
    <string name="new_chat">Começar nova conversa</string>
    <string name="main_text">Leia nossa Política de Privacidade. Toque em CONCORDAR E CONTINUAR para aceitar os <a href="https://www.whatsapp.com/legal/terms-of-service?lg=pt&amp;lc=BR&amp;eea=0">Termos de Serviço</a>.</string>
    <string name="main_text_phone_activity">O WhatsApp enviará uma mensagem SMS para confirmar seu número de telefone. Qual é meu número?</string>
    <string name="label">asd</string>
    <string name="sms_tax_msg">Sujeito a cobranças de tarifas de SMS de sua operadora</string>
    <string name="continue_button_phone_register">avançar</string>
    <string name="search_button_toolbar">botão de busca</string>
    <string name="back_button_toolbar">botão de retornar para tela anterior</string>
    <string name="search_button_title_toolbar">Pesquisar países</string>
    <string name="confirm_number_sms">Confirmar %1$s</string>
    <string name="sms_msg_confirmation">Enviamos um código SMS para <b> %1$s </b>. Número errado?</string>
    <string name="insert_sms_numbers">Insira o código de 6 dígitos</string>
</resources>