<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.PhoneRegisterActivity">

    <TextView
        android:id="@+id/tvInsertNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="Insira seu número de telefone"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#128C7E"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMainText"
        android:layout_marginTop="14dp"
        android:layout_width="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"
        android:text="@string/main_text_phone_activity"
        android:textAlignment="center"
        android:textColor="#E1000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInsertNumber" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropDownMenu"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:paddingEnd="-10dp"
        android:textAlignment="center"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="#128C7E"
        app:boxStrokeWidth="0.5dp"
        app:endIconTint="#128C7E"
        app:layout_constraintEnd_toEndOf="@id/tvInsertNumber"
        app:layout_constraintStart_toStartOf="@id/tvInsertNumber"
        app:layout_constraintTop_toBottomOf="@id/tvMainText">

        <AutoCompleteTextView
            android:id="@+id/dropDownText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:text="Brasil"
            android:textAlignment="center" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDDI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="#128C7E"
        app:prefixTextColor="#966D6969"
        app:prefixText="+ "
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="@id/dropDownMenu"
        app:layout_constraintTop_toBottomOf="@id/dropDownMenu"
        app:layout_constraintEnd_toStartOf="@id/tilNumberEdit"
        app:startIconTint="#966D6969">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDdiEdit"
            android:textAlignment="textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:text="55"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNumberEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:hint="seu número"
        android:textAlignment="textStart"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="#128C7E"
        app:layout_constraintEnd_toEndOf="@id/dropDownMenu"
        app:layout_constraintStart_toEndOf="@+id/tilDDI"
        app:layout_constraintTop_toBottomOf="@id/dropDownMenu">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNumberEdit"
            android:maxLength="16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tvSmsTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/sms_tax_msg"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilDDI" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="@drawable/customized_button"
        android:text="@string/continue_button_phone_register"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSmsTax"
        app:layout_constraintVertical_bias="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>